--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body {
   <div>
     <img src=icon.png width=32 height=32 style=float:left;margin-right:16px>
     <strong>tinkuy-event-sync</strong>
-    <div></div>
+    <div>Simple scripts to synchronise events at tinkuy.dk to couchdb database regularly</div>
   </div>
   <hr>
     <div id=app></div>
